results for BDRE

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ venv/
 experiments/density_ratio_estimation/data/
 experiments/density_ratio_estimation/raw_results/
 experiments/density_ratio_estimation/processed_results/
+**/*.DS_Store
