TSM model implementation

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 venv/
+**/__pycache__/
+**/*.pyc
 experiments/density_ratio_estimation/data/
 experiments/density_ratio_estimation/raw_results/
 experiments/density_ratio_estimation/processed_results/
