finish porting experiments to hdf5 storage

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ experiments/density_ratio_estimation_h5/data/
 experiments/density_ratio_estimation_h5/raw_results/
 experiments/density_ratio_estimation_h5/processed_results/
 **/*.DS_Store
+**/__pycache__/
