--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ experiments/density_ratio_estimation_h5/raw_results/
 experiments/density_ratio_estimation_h5/processed_results/
 **/*.DS_Store
 **/__pycache__/
+CLAUDE.md
+.*/
