--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ experiments/density_ratio_estimation/processed_results/
 experiments/density_ratio_estimation_h5/data/
 experiments/density_ratio_estimation_h5/raw_results/
 experiments/density_ratio_estimation_h5/processed_results/
+experiments/eig_estimation/data/
+experiments/eig_estimation/raw_results/
+experiments/eig_estimation/processed_results/
+experiments/eig_estimation/figures/
 **/*.DS_Store
 **/__pycache__/
 CLAUDE.md
