--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ venv/
 experiments/density_ratio_estimation/data/
 experiments/density_ratio_estimation/raw_results/
 experiments/density_ratio_estimation/processed_results/
+experiments/density_ratio_estimation/figures/*
 experiments/density_ratio_estimation_h5/data/
 experiments/density_ratio_estimation_h5/raw_results/
 experiments/density_ratio_estimation_h5/processed_results/
@@ -14,8 +15,11 @@ experiments/eig_estimation/figures/
 experiments/elbo_estimation/data/
 experiments/elbo_estimation/raw_results/
 experiments/elbo_estimation/processed_results/
-experiments/elbo_estimation/figures/
+experiments/elbo_estimation/figures/*
 **/*.DS_Store
 **/__pycache__/
 CLAUDE.md
 .*/
+*.txt
+*.pdf
+*.png
