--- a/.gitignore
+++ b/.gitignore
@@ -4,18 +4,20 @@ venv/
 experiments/density_ratio_estimation/data/
 experiments/density_ratio_estimation/raw_results/
 experiments/density_ratio_estimation/processed_results/
-experiments/density_ratio_estimation/figures/*
+experiments/dre_sample_complexity/data/
+experiments/dre_sample_complexity/raw_results/
+experiments/dre_sample_complexity/processed_results/
 experiments/density_ratio_estimation_h5/data/
 experiments/density_ratio_estimation_h5/raw_results/
 experiments/density_ratio_estimation_h5/processed_results/
 experiments/eig_estimation/data/
 experiments/eig_estimation/raw_results/
 experiments/eig_estimation/processed_results/
-experiments/eig_estimation/figures/
 experiments/elbo_estimation/data/
 experiments/elbo_estimation/raw_results/
 experiments/elbo_estimation/processed_results/
-experiments/elbo_estimation/figures/*
+experiments/plugin_dre/data/
+experiments/plugin_dre/results/
 **/*.DS_Store
 **/__pycache__/
 CLAUDE.md
@@ -23,4 +25,6 @@ CLAUDE.md
 *.txt
 *.png
 *.sbatch
-/logs/*
+/logs/
+/hpo/
+/experiments/direct3_hpo/
