plotting improvements to dre uniform plugin test

--- a/experiments/plugin_dre/config.yaml
+++ b/experiments/plugin_dre/config.yaml
@@ -13,8 +13,10 @@ n_std_padding: 3.0             # 3-sigma region around modes
 
 # Visualization
 rgb_resolution: 300            # Background density image resolution
-marker_size_min: 0.5
-marker_size_max: 15
+marker_size_min: 0.1
+marker_size_max: 10
+marker_alpha_min: 0.2          # Minimum opacity (for lowest errors)
+marker_alpha_max: 0.8          # Maximum opacity (for highest errors)
 
 # Algorithms
 tdre_waypoints: [5]
