--- a/experiments/density_ratio_estimation/config1.yaml
+++ b/experiments/density_ratio_estimation/config1.yaml
@@ -4,7 +4,7 @@ processed_results_dir: "experiments/density_ratio_estimation/processed_results"
 figures_dir: "experiments/density_ratio_estimation/figures"
 data_dim: 3
 gamma: 0.05
-kl_distances: [0.3, 1, 3, 9, 18, 36, 54]
+kl_divergences: [0.5, 2, 8, 32, 128]
 num_instances_per_kl: 10
 nsamples_train: 2048
 ntest_sets: 4
