--- a/experiments/density_ratio_estimation/config2.yaml
+++ b/experiments/density_ratio_estimation/config2.yaml
@@ -4,7 +4,7 @@ processed_results_dir: "experiments/density_ratio_estimation/samples/processed_r
 figures_dir: "experiments/density_ratio_estimation/samples/figures"
 data_dim: 3
 gamma: 0.05
-kl_distances: [0.6, 5.4, 32.4]
+kl_divergences: [0.6, 5.4, 32.4]
 num_instances_per_kl: 20
 nsamples_train: [100, 300, 900, 1800, 3600, 5400, 8100]
 ntest_sets: 1
